--- a/css/loginDaftar.css
+++ b/css/loginDaftar.css
@@ -4,6 +4,18 @@ body {
     justify-content: center;
 }
 
+.spinner-opened {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
 #formRegistrasi, #formLogin {
     height: min-content;
     min-height: 100vh;
