--- a/css/donorDarah.css
+++ b/css/donorDarah.css
@@ -1,3 +1,9 @@
+body {
+    background-color: #BEC97B;
+    display: flex;
+    justify-content: center;
+}
+
 .my-navbar {
     position: fixed;
     top: 0;
@@ -23,53 +29,54 @@
     height: 75px;
 }
 
-.cek {
-    position: fixed;
-    top: 105px;
-    padding: 0 10vw;
-    z-index: -1;
-    width: 100vw;
-    height: calc(100vh - 105px);
-    background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url('../assets/banner-family.jpg');
-    background-size: cover;
-    background-position: center;
+#formDonorDarah {
+    height: min-content;
+    min-height: 100vh;
+    width: 620px;
+    background-color: white;
+    padding: 60px;
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: column;
     align-items: center;
+    text-align: center;
+    color: black;
 }
 
+.form-select {
+    border: none;
+    border-bottom: 1px solid #ccc;
+    padding: 10px 15px;
+    outline: none;
+    border-radius: 0px;
+    width: 320px;
+  }
+  
+  .form-select:focus {
+    border: none;
+    border-bottom: 2px solid #007bff;
+    box-shadow: none;
+  }
 
-.banner {
-    position: fixed;
-    top: 105px;
-    padding: 0 10vw;
-    z-index: -1;
-    width: 100vw;
-    height: calc(100vh - 105px);
-    background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url('../assets/banner-family.jpg');
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    flex-direction: row-reverse;
-    align-items: center;
+.form-control {
+    border: none;
+    border-bottom: 1px solid #ccc;
+    padding: 10px 15px;
+    outline: none;
+    border-radius: 0px;
+  }
+  
+.form-control:focus {
+    border: none; /* Menghapus semua border */
+    border-bottom: 2px solid #007bff; /* Menambahkan border bawah */
+    box-shadow: none /* Menambahkan efek bayangan */
+  }
+
+.form-group {
+    text-align: start;
+    width: 320px;
+    margin: 20px 0px 0px;
 }
 
-.banner div {
-    text-align: right;
-    max-width: 450px;
-}
-
-.banner h1 {
-    color: #344024;
-    font-weight: bold;
-    font-size: 90px;
-    padding: 0;
-    line-height: 0.8;
-    margin: 0;
-    text-shadow: 2px 2px 4px rgb(79, 79, 79);;
-}
-
-.banner h5 {
-    font-weight: bold;
-    color: #344024;
+.form-group input {
+    width: 320px;
 }
