Membuat view daftar donor darah

--- a/css/donorDarah.css
+++ b/css/donorDarah.css
@@ -4,6 +4,19 @@ body {
     justify-content: center;
 }
 
+.spinner-opened {
+    position: fixed;
+    z-index: 3;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
 .my-navbar {
     position: fixed;
     top: 0;
@@ -30,6 +43,7 @@ body {
 }
 
 #formDonorDarah {
+    margin-top: 105px;
     height: min-content;
     min-height: 100vh;
     width: 620px;
