--- a/css/dashboard_donor_darah.css
+++ b/css/dashboard_donor_darah.css
@@ -78,6 +78,13 @@
     min-width: 100px;
 }
 
+.content .code {
+    width: 20px;
+    height: 20px;
+    border-radius: 100%;
+    border: solid 2px #fdffa0;
+}
+
 
 @media screen and (max-width: 991px) {
     .banner {
