--- a/css/adminDashboard.css
+++ b/css/adminDashboard.css
@@ -1,3 +1,18 @@
+.banner {
+    position: fixed;
+    top: 105px;
+    padding: 0 10vw;
+    z-index: -1;
+    width: 100vw;
+    height: calc(100vh - 105px);
+    background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url('../assets/banner-hati.jpg');
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
 #spinner {
     position: relative;
     height: 365.67px;
