--- a/css/adminListKesehatanUser.css
+++ b/css/adminListKesehatanUser.css
@@ -5,6 +5,19 @@
     background-color: rgba(0, 0, 0, 0.2);
 }
 
+.spinner-opened {
+    position: fixed;
+    z-index: 3;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
 .my-navbar {
     position: fixed;
     top: 0;
