--- a/css/general-Form.css
+++ b/css/general-Form.css
@@ -34,12 +34,16 @@ body {
 }
 
 .my-navbar a:hover {
-    color: black;
+    color: #d25864;
     font-weight: bold;
 }
 
 .my-navbar img {
     height: 75px;
+}
+
+.navbar-nav .active {
+    color: #DC3545;
 }
 
 form {
