--- a/css/adminListKesehatanUserDanPendonor.css
+++ b/css/adminListKesehatanUserDanPendonor.css
@@ -35,7 +35,7 @@
 }
 
 .my-navbar a:hover {
-    color: black;
+    color: #DC3545;
     font-weight: bold;
 }
 
@@ -43,6 +43,9 @@
     height: 75px;
 }
 
+.my-navbar .active {
+    color: #DC3545;
+}
 
 .content {
     min-height: calc(100vh - 105px);
